Grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    MOD
    NEW
    PUB
    WITHCAPACITY
    aMUT

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones_g
Rule 2     instrucciones_g -> instrucciones_g instruccion_g
Rule 3     instrucciones_g -> instruccion_g
Rule 4     instruccion_g -> funcion
Rule 5     instrucciones_l -> instrucciones_l instruccion_l
Rule 6     instrucciones_l -> instruccion_l
Rule 7     instruccion_l -> print PCOMA
Rule 8     instruccion_l -> declaracion PCOMA
Rule 9     instruccion_l -> asignacion PCOMA
Rule 10    instruccion_l -> llamada PCOMA
Rule 11    instruccion_l -> sentencia
Rule 12    instruccion_l -> transferencia PCOMA
Rule 13    funcion -> FN ID LPAR lista_parametros RPAR ARROW tipo_var statement
Rule 14    funcion -> FN ID LPAR lista_parametros RPAR statement
Rule 15    funcion -> FN ID LPAR RPAR ARROW tipo_var statement
Rule 16    funcion -> FN ID LPAR RPAR statement
Rule 17    sentencia -> if
Rule 18    sentencia -> match
Rule 19    sentencia -> loop
Rule 20    sentencia -> while
Rule 21    sentencia -> for
Rule 22    if -> IF exp statement else
Rule 23    else -> ELSE statement
Rule 24    else -> ELSE if
Rule 25    match -> MATCH exp match_statement
Rule 26    match_statement -> LLLAV lista_brazos RLLAV
Rule 27    match_statement -> LLLAV RLLAV
Rule 28    lista_brazos -> lista_brazos brazo
Rule 29    lista_brazos -> brazo
Rule 30    brazo -> lista_exp_brazos ARROW2 instruccion_match COMA
Rule 31    brazo -> lista_exp_brazos ARROW2 statement COMA
Rule 32    brazo -> lista_exp_brazos ARROW2 statement
Rule 33    lista_exp_brazos -> lista_exp_brazos ORSINGLE exp
Rule 34    lista_exp_brazos -> exp
Rule 35    instruccion_match -> print
Rule 36    instruccion_match -> llamada
Rule 37    instruccion_match -> sentencia
Rule 38    instruccion_match -> transferencia
Rule 39    loop -> LOOP statement
Rule 40    while -> WHILE exp statement
Rule 41    for -> FOR ID IN exp statement
Rule 42    transferencia -> BREAK
Rule 43    transferencia -> RETURN
Rule 44    transferencia -> RETURN exp
Rule 45    transferencia -> CONTINUE
Rule 46    statement -> LLLAV instrucciones_l RLLAV
Rule 47    statement -> LLLAV RLLAV
Rule 48    lista_parametros -> lista_parametros COMA asignacion_simple
Rule 49    lista_parametros -> asignacion_simple
Rule 50    declaracion -> LET asignacion_simple IGUAL exp
Rule 51    declaracion -> LET MUT asignacion
Rule 52    declaracion -> LET asignacion
Rule 53    asignacion -> ID IGUAL exp
Rule 54    asignacion -> ID lista_arr IGUAL exp
Rule 55    lista_arr -> lista_arr LCOR exp RCOR
Rule 56    lista_arr -> LCOR exp RCOR
Rule 57    lista_exp -> lista_exp COMA exp
Rule 58    lista_exp -> exp
Rule 59    asignacion_simple -> ID DPUNTOS tipo_var
Rule 60    asignacion_simple -> MUT ID DPUNTOS tipo_var
Rule 61    asignacion_simple -> ID DPUNTOS ANDSINGLE tipo_var
Rule 62    asignacion_simple -> MUT ID DPUNTOS ANDSINGLE tipo_var
Rule 63    asignacion_simple -> ID DPUNTOS ANDSINGLE MUT tipo_var
Rule 64    asignacion_simple -> MUT ID DPUNTOS ANDSINGLE MUT tipo_var
Rule 65    lista_arr2 -> LCOR tipo_var PCOMA exp RCOR
Rule 66    exp -> LPAR valores LPAR
Rule 67    exp -> expmath
Rule 68    exp -> expop
Rule 69    exp -> exprel
Rule 70    exp -> exparr
Rule 71    exp -> expvec
Rule 72    exp -> llamada
Rule 73    exp -> ID
Rule 74    exp -> valores
Rule 75    exp -> exparam
Rule 76    exp -> ID PUNTO exp_native
Rule 77    exp -> valores PUNTO exp_native
Rule 78    expmath -> exp MAS exp
Rule 79    expmath -> exp MENOS exp
Rule 80    expmath -> exp MULTIPLICACION exp
Rule 81    expmath -> exp DIVISION exp
Rule 82    expmath -> MENOS exp
Rule 83    expop -> exp AND exp
Rule 84    expop -> exp OR exp
Rule 85    expop -> AD exp
Rule 86    exprel -> exp IGUALI exp
Rule 87    exprel -> exp DIF exp
Rule 88    exprel -> exp MAYOR exp
Rule 89    exprel -> exp MENOR exp
Rule 90    exprel -> exp MAYORI exp
Rule 91    exprel -> exp MENORI exp
Rule 92    exparam -> MUT ID
Rule 93    exparam -> ANDSINGLE MUT ID
Rule 94    exparr -> ID lista_arr
Rule 95    exparr -> newarray
Rule 96    expvec -> VEC AD newarray
Rule 97    newarray -> LCOR lista_exp RCOR
Rule 98    newarray -> LCOR exp PCOMA exp RCOR
Rule 99    valores -> ENTERO
Rule 100   valores -> DECIMAL
Rule 101   valores -> CADENA
Rule 102   valores -> BOOLEANO
Rule 103   tipo_var -> I64
Rule 104   tipo_var -> F64
Rule 105   tipo_var -> STRING
Rule 106   tipo_var -> ANDSINGLE aSTR
Rule 107   tipo_var -> BOOL
Rule 108   tipo_var -> CHAR
Rule 109   tipo_var -> USIZE
Rule 110   tipo_var -> ID
Rule 111   tipo_var -> lista_arr2
Rule 112   tipo_var -> LCOR tipo_var RCOR
Rule 113   tipo_var -> VEC MENOR lista_class MAYOR
Rule 114   lista_class -> lista_class DPUNTOS tipo_var
Rule 115   lista_class -> lista_class DPUNTOS llamada
Rule 116   lista_class -> llamada
Rule 117   lista_class -> tipo_var
Rule 118   llamada -> ID LPAR RPAR
Rule 119   llamada -> ID LPAR lista_exp RPAR
Rule 120   exp_native -> TOSTRING LPAR RPAR
Rule 121   exp_native -> TOOWNED LPAR RPAR
Rule 122   exp_native -> CLONE LPAR RPAR
Rule 123   exp_native -> LEN LPAR RPAR
Rule 124   exp_native -> CAPACITY LPAR RPAR
Rule 125   exp_native -> REMOVE LPAR exp RPAR
Rule 126   exp_native -> CONTAINS LPAR exp RPAR
Rule 127   exp_native -> PUSH LPAR exp RPAR
Rule 128   exp_native -> INSERT LPAR lista_exp RPAR
Rule 129   print -> PRINT AD LPAR exp RPAR

Terminals, with rules where they appear

AD                   : 85 96 129
AND                  : 83
ANDSINGLE            : 61 62 63 64 93 106
ARROW                : 13 15
ARROW2               : 30 31 32
BOOL                 : 107
BOOLEANO             : 102
BREAK                : 42
CADENA               : 101
CAPACITY             : 124
CHAR                 : 108
CLONE                : 122
COMA                 : 30 31 48 57
CONTAINS             : 126
CONTINUE             : 45
DECIMAL              : 100
DIF                  : 87
DIVISION             : 81
DPUNTOS              : 59 60 61 62 63 64 114 115
ELSE                 : 23 24
ENTERO               : 99
F64                  : 104
FN                   : 13 14 15 16
FOR                  : 41
I64                  : 103
ID                   : 13 14 15 16 41 53 54 59 60 61 62 63 64 73 76 92 93 94 110 118 119
IF                   : 22
IGUAL                : 50 53 54
IGUALI               : 86
IN                   : 41
INSERT               : 128
LCOR                 : 55 56 65 97 98 112
LEN                  : 123
LET                  : 50 51 52
LLLAV                : 26 27 46 47
LOOP                 : 39
LPAR                 : 13 14 15 16 66 66 118 119 120 121 122 123 124 125 126 127 128 129
MAS                  : 78
MATCH                : 25
MAYOR                : 88 113
MAYORI               : 90
MENOR                : 89 113
MENORI               : 91
MENOS                : 79 82
MOD                  : 
MULTIPLICACION       : 80
MUT                  : 51 60 62 63 64 64 92 93
NEW                  : 
OR                   : 84
ORSINGLE             : 33
PCOMA                : 7 8 9 10 12 65 98
PRINT                : 129
PUB                  : 
PUNTO                : 76 77
PUSH                 : 127
RCOR                 : 55 56 65 97 98 112
REMOVE               : 125
RETURN               : 43 44
RLLAV                : 26 27 46 47
RPAR                 : 13 14 15 16 118 119 120 121 122 123 124 125 126 127 128 129
STRING               : 105
TOOWNED              : 121
TOSTRING             : 120
USIZE                : 109
VEC                  : 96 113
WHILE                : 40
WITHCAPACITY         : 
aMUT                 : 
aSTR                 : 106
error                : 

Nonterminals, with rules where they appear

asignacion           : 9 51 52
asignacion_simple    : 48 49 50
brazo                : 28 29
declaracion          : 8
else                 : 22
exp                  : 22 25 33 34 40 41 44 50 53 54 55 56 57 58 65 78 78 79 79 80 80 81 81 82 83 83 84 84 85 86 86 87 87 88 88 89 89 90 90 91 91 98 98 125 126 127 129
exp_native           : 76 77
exparam              : 75
exparr               : 70
expmath              : 67
expop                : 68
exprel               : 69
expvec               : 71
for                  : 21
funcion              : 4
if                   : 17 24
init                 : 0
instruccion_g        : 2 3
instruccion_l        : 5 6
instruccion_match    : 30
instrucciones_g      : 1 2
instrucciones_l      : 5 46
lista_arr            : 54 55 94
lista_arr2           : 111
lista_brazos         : 26 28
lista_class          : 113 114 115
lista_exp            : 57 97 119 128
lista_exp_brazos     : 30 31 32 33
lista_parametros     : 13 14 48
llamada              : 10 36 72 115 116
loop                 : 19
match                : 18
match_statement      : 25
newarray             : 95 96
print                : 7 35
sentencia            : 11 37
statement            : 13 14 15 16 22 23 31 32 39 40 41
tipo_var             : 13 15 59 60 61 62 63 64 65 112 114 117
transferencia        : 12 38
valores              : 66 74 77
while                : 20

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones_g
    (2) instrucciones_g -> . instrucciones_g instruccion_g
    (3) instrucciones_g -> . instruccion_g
    (4) instruccion_g -> . funcion
    (13) funcion -> . FN ID LPAR lista_parametros RPAR ARROW tipo_var statement
    (14) funcion -> . FN ID LPAR lista_parametros RPAR statement
    (15) funcion -> . FN ID LPAR RPAR ARROW tipo_var statement
    (16) funcion -> . FN ID LPAR RPAR statement

    FN              shift and go to state 5

    init                           shift and go to state 1
    instrucciones_g                shift and go to state 2
    instruccion_g                  shift and go to state 3
    funcion                        shift and go to state 4

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones_g .
    (2) instrucciones_g -> instrucciones_g . instruccion_g
    (4) instruccion_g -> . funcion
    (13) funcion -> . FN ID LPAR lista_parametros RPAR ARROW tipo_var statement
    (14) funcion -> . FN ID LPAR lista_parametros RPAR statement
    (15) funcion -> . FN ID LPAR RPAR ARROW tipo_var statement
    (16) funcion -> . FN ID LPAR RPAR statement

    $end            reduce using rule 1 (init -> instrucciones_g .)
    FN              shift and go to state 5

    instruccion_g                  shift and go to state 6
    funcion                        shift and go to state 4

state 3

    (3) instrucciones_g -> instruccion_g .

    FN              reduce using rule 3 (instrucciones_g -> instruccion_g .)
    $end            reduce using rule 3 (instrucciones_g -> instruccion_g .)


state 4

    (4) instruccion_g -> funcion .

    FN              reduce using rule 4 (instruccion_g -> funcion .)
    $end            reduce using rule 4 (instruccion_g -> funcion .)


state 5

    (13) funcion -> FN . ID LPAR lista_parametros RPAR ARROW tipo_var statement
    (14) funcion -> FN . ID LPAR lista_parametros RPAR statement
    (15) funcion -> FN . ID LPAR RPAR ARROW tipo_var statement
    (16) funcion -> FN . ID LPAR RPAR statement

    ID              shift and go to state 7


state 6

    (2) instrucciones_g -> instrucciones_g instruccion_g .

    FN              reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)
    $end            reduce using rule 2 (instrucciones_g -> instrucciones_g instruccion_g .)


state 7

    (13) funcion -> FN ID . LPAR lista_parametros RPAR ARROW tipo_var statement
    (14) funcion -> FN ID . LPAR lista_parametros RPAR statement
    (15) funcion -> FN ID . LPAR RPAR ARROW tipo_var statement
    (16) funcion -> FN ID . LPAR RPAR statement

    LPAR            shift and go to state 8


state 8

    (13) funcion -> FN ID LPAR . lista_parametros RPAR ARROW tipo_var statement
    (14) funcion -> FN ID LPAR . lista_parametros RPAR statement
    (15) funcion -> FN ID LPAR . RPAR ARROW tipo_var statement
    (16) funcion -> FN ID LPAR . RPAR statement
    (48) lista_parametros -> . lista_parametros COMA asignacion_simple
    (49) lista_parametros -> . asignacion_simple
    (59) asignacion_simple -> . ID DPUNTOS tipo_var
    (60) asignacion_simple -> . MUT ID DPUNTOS tipo_var
    (61) asignacion_simple -> . ID DPUNTOS ANDSINGLE tipo_var
    (62) asignacion_simple -> . MUT ID DPUNTOS ANDSINGLE tipo_var
    (63) asignacion_simple -> . ID DPUNTOS ANDSINGLE MUT tipo_var
    (64) asignacion_simple -> . MUT ID DPUNTOS ANDSINGLE MUT tipo_var

    RPAR            shift and go to state 11
    ID              shift and go to state 9
    MUT             shift and go to state 13

    lista_parametros               shift and go to state 10
    asignacion_simple              shift and go to state 12

state 9

    (59) asignacion_simple -> ID . DPUNTOS tipo_var
    (61) asignacion_simple -> ID . DPUNTOS ANDSINGLE tipo_var
    (63) asignacion_simple -> ID . DPUNTOS ANDSINGLE MUT tipo_var

    DPUNTOS         shift and go to state 14


state 10

    (13) funcion -> FN ID LPAR lista_parametros . RPAR ARROW tipo_var statement
    (14) funcion -> FN ID LPAR lista_parametros . RPAR statement
    (48) lista_parametros -> lista_parametros . COMA asignacion_simple

    RPAR            shift and go to state 15
    COMA            shift and go to state 16


state 11

    (15) funcion -> FN ID LPAR RPAR . ARROW tipo_var statement
    (16) funcion -> FN ID LPAR RPAR . statement
    (46) statement -> . LLLAV instrucciones_l RLLAV
    (47) statement -> . LLLAV RLLAV

    ARROW           shift and go to state 17
    LLLAV           shift and go to state 19

    statement                      shift and go to state 18

state 12

    (49) lista_parametros -> asignacion_simple .

    RPAR            reduce using rule 49 (lista_parametros -> asignacion_simple .)
    COMA            reduce using rule 49 (lista_parametros -> asignacion_simple .)


state 13

    (60) asignacion_simple -> MUT . ID DPUNTOS tipo_var
    (62) asignacion_simple -> MUT . ID DPUNTOS ANDSINGLE tipo_var
    (64) asignacion_simple -> MUT . ID DPUNTOS ANDSINGLE MUT tipo_var

    ID              shift and go to state 20


state 14

    (59) asignacion_simple -> ID DPUNTOS . tipo_var
    (61) asignacion_simple -> ID DPUNTOS . ANDSINGLE tipo_var
    (63) asignacion_simple -> ID DPUNTOS . ANDSINGLE MUT tipo_var
    (103) tipo_var -> . I64
    (104) tipo_var -> . F64
    (105) tipo_var -> . STRING
    (106) tipo_var -> . ANDSINGLE aSTR
    (107) tipo_var -> . BOOL
    (108) tipo_var -> . CHAR
    (109) tipo_var -> . USIZE
    (110) tipo_var -> . ID
    (111) tipo_var -> . lista_arr2
    (112) tipo_var -> . LCOR tipo_var RCOR
    (113) tipo_var -> . VEC MENOR lista_class MAYOR
    (65) lista_arr2 -> . LCOR tipo_var PCOMA exp RCOR

    ANDSINGLE       shift and go to state 23
    I64             shift and go to state 24
    F64             shift and go to state 25
    STRING          shift and go to state 26
    BOOL            shift and go to state 27
    CHAR            shift and go to state 28
    USIZE           shift and go to state 29
    ID              shift and go to state 21
    LCOR            shift and go to state 31
    VEC             shift and go to state 32

    tipo_var                       shift and go to state 22
    lista_arr2                     shift and go to state 30

state 15

    (13) funcion -> FN ID LPAR lista_parametros RPAR . ARROW tipo_var statement
    (14) funcion -> FN ID LPAR lista_parametros RPAR . statement
    (46) statement -> . LLLAV instrucciones_l RLLAV
    (47) statement -> . LLLAV RLLAV

    ARROW           shift and go to state 33
    LLLAV           shift and go to state 19

    statement                      shift and go to state 34

state 16

    (48) lista_parametros -> lista_parametros COMA . asignacion_simple
    (59) asignacion_simple -> . ID DPUNTOS tipo_var
    (60) asignacion_simple -> . MUT ID DPUNTOS tipo_var
    (61) asignacion_simple -> . ID DPUNTOS ANDSINGLE tipo_var
    (62) asignacion_simple -> . MUT ID DPUNTOS ANDSINGLE tipo_var
    (63) asignacion_simple -> . ID DPUNTOS ANDSINGLE MUT tipo_var
    (64) asignacion_simple -> . MUT ID DPUNTOS ANDSINGLE MUT tipo_var

    ID              shift and go to state 9
    MUT             shift and go to state 13

    asignacion_simple              shift and go to state 35

state 17

    (15) funcion -> FN ID LPAR RPAR ARROW . tipo_var statement
    (103) tipo_var -> . I64
    (104) tipo_var -> . F64
    (105) tipo_var -> . STRING
    (106) tipo_var -> . ANDSINGLE aSTR
    (107) tipo_var -> . BOOL
    (108) tipo_var -> . CHAR
    (109) tipo_var -> . USIZE
    (110) tipo_var -> . ID
    (111) tipo_var -> . lista_arr2
    (112) tipo_var -> . LCOR tipo_var RCOR
    (113) tipo_var -> . VEC MENOR lista_class MAYOR
    (65) lista_arr2 -> . LCOR tipo_var PCOMA exp RCOR

    I64             shift and go to state 24
    F64             shift and go to state 25
    STRING          shift and go to state 26
    ANDSINGLE       shift and go to state 37
    BOOL            shift and go to state 27
    CHAR            shift and go to state 28
    USIZE           shift and go to state 29
    ID              shift and go to state 21
    LCOR            shift and go to state 31
    VEC             shift and go to state 32

    tipo_var                       shift and go to state 36
    lista_arr2                     shift and go to state 30

state 18

    (16) funcion -> FN ID LPAR RPAR statement .

    FN              reduce using rule 16 (funcion -> FN ID LPAR RPAR statement .)
    $end            reduce using rule 16 (funcion -> FN ID LPAR RPAR statement .)


state 19

    (46) statement -> LLLAV . instrucciones_l RLLAV
    (47) statement -> LLLAV . RLLAV
    (5) instrucciones_l -> . instrucciones_l instruccion_l
    (6) instrucciones_l -> . instruccion_l
    (7) instruccion_l -> . print PCOMA
    (8) instruccion_l -> . declaracion PCOMA
    (9) instruccion_l -> . asignacion PCOMA
    (10) instruccion_l -> . llamada PCOMA
    (11) instruccion_l -> . sentencia
    (12) instruccion_l -> . transferencia PCOMA
    (129) print -> . PRINT AD LPAR exp RPAR
    (50) declaracion -> . LET asignacion_simple IGUAL exp
    (51) declaracion -> . LET MUT asignacion
    (52) declaracion -> . LET asignacion
    (53) asignacion -> . ID IGUAL exp
    (54) asignacion -> . ID lista_arr IGUAL exp
    (118) llamada -> . ID LPAR RPAR
    (119) llamada -> . ID LPAR lista_exp RPAR
    (17) sentencia -> . if
    (18) sentencia -> . match
    (19) sentencia -> . loop
    (20) sentencia -> . while
    (21) sentencia -> . for
    (42) transferencia -> . BREAK
    (43) transferencia -> . RETURN
    (44) transferencia -> . RETURN exp
    (45) transferencia -> . CONTINUE
    (22) if -> . IF exp statement else
    (25) match -> . MATCH exp match_statement
    (39) loop -> . LOOP statement
    (40) while -> . WHILE exp statement
    (41) for -> . FOR ID IN exp statement

    RLLAV           shift and go to state 39
    PRINT           shift and go to state 47
    LET             shift and go to state 48
    ID              shift and go to state 49
    BREAK           shift and go to state 55
    RETURN          shift and go to state 56
    CONTINUE        shift and go to state 57
    IF              shift and go to state 58
    MATCH           shift and go to state 59
    LOOP            shift and go to state 60
    WHILE           shift and go to state 61
    FOR             shift and go to state 62

    instrucciones_l                shift and go to state 38
    instruccion_l                  shift and go to state 40
    print                          shift and go to state 41
    declaracion                    shift and go to state 42
    asignacion                     shift and go to state 43
    llamada                        shift and go to state 44
    sentencia                      shift and go to state 45
    transferencia                  shift and go to state 46
    if                             shift and go to state 50
    match                          shift and go to state 51
    loop                           shift and go to state 52
    while                          shift and go to state 53
    for                            shift and go to state 54

state 20

    (60) asignacion_simple -> MUT ID . DPUNTOS tipo_var
    (62) asignacion_simple -> MUT ID . DPUNTOS ANDSINGLE tipo_var
    (64) asignacion_simple -> MUT ID . DPUNTOS ANDSINGLE MUT tipo_var

    DPUNTOS         shift and go to state 63


state 21

    (110) tipo_var -> ID .

    RPAR            reduce using rule 110 (tipo_var -> ID .)
    COMA            reduce using rule 110 (tipo_var -> ID .)
    IGUAL           reduce using rule 110 (tipo_var -> ID .)
    LLLAV           reduce using rule 110 (tipo_var -> ID .)
    RCOR            reduce using rule 110 (tipo_var -> ID .)
    PCOMA           reduce using rule 110 (tipo_var -> ID .)


state 22

    (59) asignacion_simple -> ID DPUNTOS tipo_var .

    RPAR            reduce using rule 59 (asignacion_simple -> ID DPUNTOS tipo_var .)
    COMA            reduce using rule 59 (asignacion_simple -> ID DPUNTOS tipo_var .)
    IGUAL           reduce using rule 59 (asignacion_simple -> ID DPUNTOS tipo_var .)


state 23

    (61) asignacion_simple -> ID DPUNTOS ANDSINGLE . tipo_var
    (63) asignacion_simple -> ID DPUNTOS ANDSINGLE . MUT tipo_var
    (106) tipo_var -> ANDSINGLE . aSTR
    (103) tipo_var -> . I64
    (104) tipo_var -> . F64
    (105) tipo_var -> . STRING
    (106) tipo_var -> . ANDSINGLE aSTR
    (107) tipo_var -> . BOOL
    (108) tipo_var -> . CHAR
    (109) tipo_var -> . USIZE
    (110) tipo_var -> . ID
    (111) tipo_var -> . lista_arr2
    (112) tipo_var -> . LCOR tipo_var RCOR
    (113) tipo_var -> . VEC MENOR lista_class MAYOR
    (65) lista_arr2 -> . LCOR tipo_var PCOMA exp RCOR

    MUT             shift and go to state 65
    aSTR            shift and go to state 66
    I64             shift and go to state 24
    F64             shift and go to state 25
    STRING          shift and go to state 26
    ANDSINGLE       shift and go to state 37
    BOOL            shift and go to state 27
    CHAR            shift and go to state 28
    USIZE           shift and go to state 29
    ID              shift and go to state 21
    LCOR            shift and go to state 31
    VEC             shift and go to state 32

    tipo_var                       shift and go to state 64
    lista_arr2                     shift and go to state 30

state 24

    (103) tipo_var -> I64 .

    RPAR            reduce using rule 103 (tipo_var -> I64 .)
    COMA            reduce using rule 103 (tipo_var -> I64 .)
    IGUAL           reduce using rule 103 (tipo_var -> I64 .)
    LLLAV           reduce using rule 103 (tipo_var -> I64 .)
    RCOR            reduce using rule 103 (tipo_var -> I64 .)
    PCOMA           reduce using rule 103 (tipo_var -> I64 .)
    MAYOR           reduce using rule 103 (tipo_var -> I64 .)
    DPUNTOS         reduce using rule 103 (tipo_var -> I64 .)


state 25

    (104) tipo_var -> F64 .

    RPAR            reduce using rule 104 (tipo_var -> F64 .)
    COMA            reduce using rule 104 (tipo_var -> F64 .)
    IGUAL           reduce using rule 104 (tipo_var -> F64 .)
    LLLAV           reduce using rule 104 (tipo_var -> F64 .)
    RCOR            reduce using rule 104 (tipo_var -> F64 .)
    PCOMA           reduce using rule 104 (tipo_var -> F64 .)
    MAYOR           reduce using rule 104 (tipo_var -> F64 .)
    DPUNTOS         reduce using rule 104 (tipo_var -> F64 .)


state 26

    (105) tipo_var -> STRING .

    RPAR            reduce using rule 105 (tipo_var -> STRING .)
    COMA            reduce using rule 105 (tipo_var -> STRING .)
    IGUAL           reduce using rule 105 (tipo_var -> STRING .)
    LLLAV           reduce using rule 105 (tipo_var -> STRING .)
    RCOR            reduce using rule 105 (tipo_var -> STRING .)
    PCOMA           reduce using rule 105 (tipo_var -> STRING .)
    MAYOR           reduce using rule 105 (tipo_var -> STRING .)
    DPUNTOS         reduce using rule 105 (tipo_var -> STRING .)


state 27

    (107) tipo_var -> BOOL .

    RPAR            reduce using rule 107 (tipo_var -> BOOL .)
    COMA            reduce using rule 107 (tipo_var -> BOOL .)
    IGUAL           reduce using rule 107 (tipo_var -> BOOL .)
    LLLAV           reduce using rule 107 (tipo_var -> BOOL .)
    RCOR            reduce using rule 107 (tipo_var -> BOOL .)
    PCOMA           reduce using rule 107 (tipo_var -> BOOL .)
    MAYOR           reduce using rule 107 (tipo_var -> BOOL .)
    DPUNTOS         reduce using rule 107 (tipo_var -> BOOL .)


state 28

    (108) tipo_var -> CHAR .

    RPAR            reduce using rule 108 (tipo_var -> CHAR .)
    COMA            reduce using rule 108 (tipo_var -> CHAR .)
    IGUAL           reduce using rule 108 (tipo_var -> CHAR .)
    LLLAV           reduce using rule 108 (tipo_var -> CHAR .)
    RCOR            reduce using rule 108 (tipo_var -> CHAR .)
    PCOMA           reduce using rule 108 (tipo_var -> CHAR .)
    MAYOR           reduce using rule 108 (tipo_var -> CHAR .)
    DPUNTOS         reduce using rule 108 (tipo_var -> CHAR .)


state 29

    (109) tipo_var -> USIZE .

    RPAR            reduce using rule 109 (tipo_var -> USIZE .)
    COMA            reduce using rule 109 (tipo_var -> USIZE .)
    IGUAL           reduce using rule 109 (tipo_var -> USIZE .)
    LLLAV           reduce using rule 109 (tipo_var -> USIZE .)
    RCOR            reduce using rule 109 (tipo_var -> USIZE .)
    PCOMA           reduce using rule 109 (tipo_var -> USIZE .)
    MAYOR           reduce using rule 109 (tipo_var -> USIZE .)
    DPUNTOS         reduce using rule 109 (tipo_var -> USIZE .)


state 30

    (111) tipo_var -> lista_arr2 .

    RPAR            reduce using rule 111 (tipo_var -> lista_arr2 .)
    COMA            reduce using rule 111 (tipo_var -> lista_arr2 .)
    IGUAL           reduce using rule 111 (tipo_var -> lista_arr2 .)
    LLLAV           reduce using rule 111 (tipo_var -> lista_arr2 .)
    RCOR            reduce using rule 111 (tipo_var -> lista_arr2 .)
    PCOMA           reduce using rule 111 (tipo_var -> lista_arr2 .)
    MAYOR           reduce using rule 111 (tipo_var -> lista_arr2 .)
    DPUNTOS         reduce using rule 111 (tipo_var -> lista_arr2 .)


state 31

    (112) tipo_var -> LCOR . tipo_var RCOR
    (65) lista_arr2 -> LCOR . tipo_var PCOMA exp RCOR
    (103) tipo_var -> . I64
    (104) tipo_var -> . F64
    (105) tipo_var -> . STRING
    (106) tipo_var -> . ANDSINGLE aSTR
    (107) tipo_var -> . BOOL
    (108) tipo_var -> . CHAR
    (109) tipo_var -> . USIZE
    (110) tipo_var -> . ID
    (111) tipo_var -> . lista_arr2
    (112) tipo_var -> . LCOR tipo_var RCOR
    (113) tipo_var -> . VEC MENOR lista_class MAYOR
    (65) lista_arr2 -> . LCOR tipo_var PCOMA exp RCOR

    I64             shift and go to state 24
    F64             shift and go to state 25
    STRING          shift and go to state 26
    ANDSINGLE       shift and go to state 37
    BOOL            shift and go to state 27
    CHAR            shift and go to state 28
    USIZE           shift and go to state 29
    ID              shift and go to state 21
    LCOR            shift and go to state 31
    VEC             shift and go to state 32

    tipo_var                       shift and go to state 67
    lista_arr2                     shift and go to state 30

state 32

    (113) tipo_var -> VEC . MENOR lista_class MAYOR

    MENOR           shift and go to state 68


state 33

    (13) funcion -> FN ID LPAR lista_parametros RPAR ARROW . tipo_var statement
    (103) tipo_var -> . I64
    (104) tipo_var -> . F64
    (105) tipo_var -> . STRING
    (106) tipo_var -> . ANDSINGLE aSTR
    (107) tipo_var -> . BOOL
    (108) tipo_var -> . CHAR
    (109) tipo_var -> . USIZE
    (110) tipo_var -> . ID
    (111) tipo_var -> . lista_arr2
    (112) tipo_var -> . LCOR tipo_var RCOR
    (113) tipo_var -> . VEC MENOR lista_class MAYOR
    (65) lista_arr2 -> . LCOR tipo_var PCOMA exp RCOR

    I64             shift and go to state 24
    F64             shift and go to state 25
    STRING          shift and go to state 26
    ANDSINGLE       shift and go to state 37
    BOOL            shift and go to state 27
    CHAR            shift and go to state 28
    USIZE           shift and go to state 29
    ID              shift and go to state 21
    LCOR            shift and go to state 31
    VEC             shift and go to state 32

    tipo_var                       shift and go to state 69
    lista_arr2                     shift and go to state 30

state 34

    (14) funcion -> FN ID LPAR lista_parametros RPAR statement .

    FN              reduce using rule 14 (funcion -> FN ID LPAR lista_parametros RPAR statement .)
    $end            reduce using rule 14 (funcion -> FN ID LPAR lista_parametros RPAR statement .)


state 35

    (48) lista_parametros -> lista_parametros COMA asignacion_simple .

    RPAR            reduce using rule 48 (lista_parametros -> lista_parametros COMA asignacion_simple .)
    COMA            reduce using rule 48 (lista_parametros -> lista_parametros COMA asignacion_simple .)


state 36

    (15) funcion -> FN ID LPAR RPAR ARROW tipo_var . statement
    (46) statement -> . LLLAV instrucciones_l RLLAV
    (47) statement -> . LLLAV RLLAV

    LLLAV           shift and go to state 19

    statement                      shift and go to state 70

state 37

    (106) tipo_var -> ANDSINGLE . aSTR

    aSTR            shift and go to state 66


state 38

    (46) statement -> LLLAV instrucciones_l . RLLAV
    (5) instrucciones_l -> instrucciones_l . instruccion_l
    (7) instruccion_l -> . print PCOMA
    (8) instruccion_l -> . declaracion PCOMA
    (9) instruccion_l -> . asignacion PCOMA
    (10) instruccion_l -> . llamada PCOMA
    (11) instruccion_l -> . sentencia
    (12) instruccion_l -> . transferencia PCOMA
    (129) print -> . PRINT AD LPAR exp RPAR
    (50) declaracion -> . LET asignacion_simple IGUAL exp
    (51) declaracion -> . LET MUT asignacion
    (52) declaracion -> . LET asignacion
    (53) asignacion -> . ID IGUAL exp
    (54) asignacion -> . ID lista_arr IGUAL exp
    (118) llamada -> . ID LPAR RPAR
    (119) llamada -> . ID LPAR lista_exp RPAR
    (17) sentencia -> . if
    (18) sentencia -> . match
    (19) sentencia -> . loop
    (20) sentencia -> . while
    (21) sentencia -> . for
    (42) transferencia -> . BREAK
    (43) transferencia -> . RETURN
    (44) transferencia -> . RETURN exp
    (45) transferencia -> . CONTINUE
    (22) if -> . IF exp statement else
    (25) match -> . MATCH exp match_statement
    (39) loop -> . LOOP statement
    (40) while -> . WHILE exp statement
    (41) for -> . FOR ID IN exp statement

    RLLAV           shift and go to state 71
    PRINT           shift and go to state 47
    LET             shift and go to state 48
    ID              shift and go to state 49
    BREAK           shift and go to state 55
    RETURN          shift and go to state 56
    CONTINUE        shift and go to state 57
    IF              shift and go to state 58
    MATCH           shift and go to state 59
    LOOP            shift and go to state 60
    WHILE           shift and go to state 61
    FOR             shift and go to state 62

    instruccion_l                  shift and go to state 72
    print                          shift and go to state 41
    declaracion                    shift and go to state 42
    asignacion                     shift and go to state 43
    llamada                        shift and go to state 44
    sentencia                      shift and go to state 45
    transferencia                  shift and go to state 46
    if                             shift and go to state 50
    match                          shift and go to state 51
    loop                           shift and go to state 52
    while                          shift and go to state 53
    for                            shift and go to state 54

state 39

    (47) statement -> LLLAV RLLAV .

    FN              reduce using rule 47 (statement -> LLLAV RLLAV .)
    $end            reduce using rule 47 (statement -> LLLAV RLLAV .)
    RLLAV           reduce using rule 47 (statement -> LLLAV RLLAV .)
    PRINT           reduce using rule 47 (statement -> LLLAV RLLAV .)
    LET             reduce using rule 47 (statement -> LLLAV RLLAV .)
    ID              reduce using rule 47 (statement -> LLLAV RLLAV .)
